--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "css-to-object": "^1.1.0",
+    "effector": "^22.2.0",
+    "effector-react": "^22.0.6",
     "htmltojsx": "^0.3.0",
     "lodash": "^4.17.21",
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "17.0.2",
     "svg-parser": "^2.0.4",
     "svgo": "^2.8.0"
@@ -21,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^17.0.15",
     "@types/react": "^17.0.39",
+    "@types/react-color": "^3.0.6",
     "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
