--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "effector": "^22.2.0",
     "effector-react": "^22.0.6",
     "htmltojsx": "^0.3.0",
+    "i18next": "^21.6.11",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.3.2",
     "lodash": "^4.17.21",
     "next": "12.0.10",
     "react": "17.0.2",
